# backtester

./: CMakeLists.txt  README.md
data/: AAPL.csv  EURUSD.csv  GBPUSD.csv  NDX.csv  NVDA.csv  QQQ.csv  USDJPY.csv  XAGUSD.csv  XAUUSD.csv  ^nkx_d.csv  btcusd_d.csv  eurusd_d.csv  qqq_us_d.csv
include/: Backtester.hpp  Candle.hpp  Data.hpp  DataManager.hpp  Events.hpp  Menu.hpp  PositionManager.hpp  Reporter.hpp  Strategy.hpp  StrategyMA.hpp  StrategySMA.hpp  Wallet.hpp  backtester.hpp
include/Strategies/: Strategy.hpp  StrategyEngulfing.hpp  StrategyInfo.hpp  StrategyRegistry.hpp  StrategySMA.hpp
src/: Backtester.cpp  Data.cpp  DataManager.cpp  Menu.cpp  PositionManager.cpp  Reporter.cpp  Strategy.cpp  StrategyMA.cpp  StrategySMA.cpp  Wallet.cpp  main.cpp
src/Strategies/: StrategyEngulfing.cpp  StrategyRegistry.cpp  StrategySMA.cpp
tests/: BacktestFlow.integration.test.cpp  DataManager.test.cpp  PositionManager.test.cpp  Wallet.test.cpp
tests/fixtures/: invalid.csv  valid.csv
